--- a/MonopHelper/Pages/Cards/Actions/Index.cshtml
+++ b/MonopHelper/Pages/Cards/Actions/Index.cshtml
@@ -95,21 +95,8 @@
                                             switch (a.Type)
                                             {
                                                 case CardActions.MOVE:
-                                                    @* var moveAction = (MoveAction)a; *@
-                                                    @* <thead class="table-secondary"> *@
-                                                    @* <tr> *@
-                                                    @*     <th>Value</th> *@
-                                                    @*     <th>Direction</th> *@
-                                                    @*     <th>Player</th> *@
-                                                    @* </tr> *@
-                                                    @* </thead> *@
-                                                    @* <tbody class="table-light"> *@
-                                                    @* <tr> *@
-                                                    @*     <td>@(moveAction.IsAdvance ? $"Advance to Index {moveAction.Value}" : $"Move {moveAction.Value} Spaces")</td> *@
-                                                    @*     <td>@(moveAction.IsForward ? "Move forwards (Pass GO)" : "Move backwards (Do not pass GO)")</td> *@
-                                                    @*     <td>@(moveAction.IsAllPlayers ? "All Players" : "Player who plays the card")</td> *@
-                                                    @* </tr> *@
-                                                    @* </tbody> *@
+                                                    var moveAction = (MoveBaseAction)a;
+                                                    <partial name="Cards/Actions/Partials/View/_ViewMoveAction" model="moveAction"/>
                                                     break;
                                                 case CardActions.PAY:
                                                     var payAction = (PayAction)a;
@@ -206,37 +193,8 @@
                                                     </tbody>
                                                     break;
                                                 case CardActions.EVENT:
-                                                    @* var eventAction = (EventAction)a; *@
-                                                    @* <thead class="table-secondary"> *@
-                                                    @* <tr> *@
-                                                    @*     <th>Event Type</th> *@
-                                                    @*     <th>Free Parking Event</th> *@
-                                                    @*     <th>End Condition</th> *@
-                                                    @*     <th>Value</th> *@
-                                                    @*     <th>Player</th> *@
-                                                    @*     <th>Pay on GO?</th> *@
-                                                    @*     <th>Receive Rent in Jail?</th> *@
-                                                    @* </tr> *@
-                                                    @* </thead> *@
-                                                    @* <tbody class="table-light"> *@
-                                                    @* <tr> *@
-                                                    @*     @{ *@
-                                                    @*         var valType = eventAction.EventTypeOld switch *@
-                                                    @*         { *@
-                                                    @*             EventTypeOLD.EXTRA_TURNS or EventTypeOLD.MISS_TURNS => "Turns", *@
-                                                    @*             EventTypeOLD.TAX or EventTypeOLD.STATIONS or EventTypeOLD.UTILITIES => "Rent Multiplier", *@
-                                                    @*             _ => eventAction.Condition.GetDisplayName() *@
-                                                    @*         }; *@
-                                                    @*     } *@
-                                                    @*     <td>@eventAction.EventTypeOld.GetDisplayName()</td> *@
-                                                    @*     <td>@(eventAction.EventTypeOld != EventTypeOLD.FREE_PARKING ? "-" : eventAction.FpEventOld.GetDisplayName())</td> *@
-                                                    @*     <td>@eventAction.Condition.GetDisplayName()</td> *@
-                                                    @*     <td>@(eventAction.EventTypeOld == EventTypeOLD.FREE_PARKING ? "-" : $"{eventAction.Value} {valType}")</td> *@
-                                                    @*     <td>@eventAction.PlayerAction.GetDisplayName()</td> *@
-                                                    @*     <td>@(eventAction.EventTypeOld != EventTypeOLD.GO ? "-" : (eventAction.IsPayOnGo ? "Yes" : "No"))</td> *@
-                                                    @*     <td>@(eventAction.EventTypeOld != EventTypeOLD.JAIL ? "-" : (eventAction.IsReceiveRent ? "Yes" : "No"))</td> *@
-                                                    @* </tr> *@
-                                                    @* </tbody> *@
+                                                    var eventAction = (EventBaseAction)a;
+                                                    <partial name="Cards/Actions/Partials/View/_ViewEventAction" model="a"/>
                                                     break;
                                                 default:
                                                     <p class="text-danger">
